--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "build": "NODE_ENV=development node_modules/.bin/webpack  && node_modules/.bin/nodemon"
   },
   "dependencies": {
+    "bcrypt": "^0.8.6",
     "body-parser": "~1.13.2",
     "cors": "^2.7.1",
     "debug": "~2.2.0",
+    "dotenv": "^2.0.0",
     "express": "~4.13.1",
     "express-jwt": "^3.4.0",
     "jsonwebtoken": "^6.2.0",
-    "morgan": "~1.6.1"
+    "knex": "^0.11.1",
+    "morgan": "~1.6.1",
+    "pg": "^4.5.5"
   },
   "devDependencies": {
     "angular": "^1.5.5",
