--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "main": "./bin/www",
   "author": "Mickey J",
   "scripts": {
-    "start": "node_modules/.bin/nodemon ./bin/www",
+    "start": "node ./bin/www",
     "dev": "NODE_ENV=development node_modules/.bin/webpack-dev-server --inline --hot",
     "stage": "NODE_ENV=staging node_modules/.bin/webpack-dev-server -p",
-    "build": "NODE_ENV=development node_modules/.bin/webpack  && node_modules/.bin/nodemon"
+    "build": "NODE_ENV=production node_modules/.bin/webpack  && node_modules/.bin/nodemon"
   },
   "dependencies": {
     "bcrypt": "^0.8.6",
